// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GifGrid tests Must display items when images are loaded with useFetchGifs 1`] = `
<div>
  <h3>
    Doge
  </h3>
  <div
    class="card-grid"
  >
    <div
      class="card"
    >
      <img
        alt="Google"
        src="https://google.com"
      />
      <p>
        Google
      </p>
    </div>
    <div
      class="card"
    >
      <img
        alt="Youtube"
        src="https://youtube.com"
      />
      <p>
        Youtube
      </p>
    </div>
  </div>
</div>
`;

exports[`GifGrid tests Renders (initial loading) 1`] = `
<div>
  <h3>
    Doge
  </h3>
  <h2>
    Cargando...
  </h2>
  <div
    class="card-grid"
  />
</div>
`;
